--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "request": "^2.79.0",
     "ws": "^1.1.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node_modules/.bin/mocha --bail"
   },
   "author": "",
   "license": "ISC"
